--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -1660,7 +1660,7 @@
 	Backpack = true
 	Crate = false
 	Magnets = true
-	"Matrix Enchanting" = true
+	"Matrix Enchanting" = false
 	Pipes = true
 	"Totem Of Holding" = true
 
