--- a/config/repurposed_structures-common.toml
+++ b/config/repurposed_structures-common.toml
@@ -12,7 +12,7 @@
 		["Mod-wide Impacting Options"."Feature Options".Misc]
 			#
 			# Adds giant boulders to modded Giant Tree Taiga (or Redwood) biomes.
-			addGiantBouldersModdedBiomes = false
+			addGiantBouldersModdedBiomes = true
 			#
 			# Add the ID/resource location of the biome you don't want
 			# RS's boulders to spawn in. Separate each ID with a comma ,
@@ -21,7 +21,7 @@
 			#
 			# How many Giant Boulders per chunk. (Can be decimal too)
 			#Range: 0.0 ~ 100.0
-			giantBouldersPerChunk = 0.5
+			giantBouldersPerChunk = 0.05
 			#
 			# 1 out of ___ chance of Diamond Ore when placing
 			# a block in giant Boulders. Lower number = more common.
@@ -30,7 +30,7 @@
 			diamondChanceInGiantBoulders = 7000
 			#
 			# Adds tiny boulders to modded Taiga biomes.
-			addTinyBouldersModdedBiomes = false
+			addTinyBouldersModdedBiomes = true
 			#
 			# Adds tiny boulders to Taiga Mountains and Snowy Taiga Mountains biomes 
 			# that can contain small amounts of Coal and Iron ores.
@@ -62,7 +62,7 @@
 			# Note: Mossy Stone Bricks block cannot be infected by Silverfish
 			# 0 for no Silverfish Blocks and 100 for max spawnrate.
 			#Range: 0.0 ~ 100.0
-			silverfishSpawnrate = 0.5
+			silverfishSpawnrate = 0.1
 			#
 			# Silverfish Mob Spawners generate in Stone Fortresses.
 			# If turned off, the spawners will become Skeleton spawners.
@@ -81,7 +81,7 @@
 			# How rare are Grassy Igloos in Plains and Forests.
 			# 1 for spawning in most chunks and 1001 for no spawn.
 			#Range: 1 ~ 1001
-			grassyIglooMaxChunkDistance = 20
+			grassyIglooMaxChunkDistance = 220
 			#
 			# Add Grassy Igloos to modded biomes that are most likely grassy fields or temperate forests.
 			addGrassyIglooToModdedBiomes = true
@@ -89,7 +89,7 @@
 			# How rare are Stone Igloos in Giant Tree Taiga biomes.
 			# 1 for spawning in most chunks and 1001 for no spawn.
 			#Range: 1 ~ 1001
-			stoneIglooMaxChunkDistance = 20
+			stoneIglooMaxChunkDistance = 220
 			#
 			# Add Stone Igloos to modded biomes that are most likely Giant Tree Taiga variants.
 			addStoneIglooToModdedBiomes = true
@@ -104,7 +104,7 @@
 			# How rare are End themed Ruined Portals in End category biomes. 1 for spawning in most
 			# chunks and 1001 for none.
 			#Range: 1 ~ 1001
-			ruinedPortalEndMaxChunkDistance = 57
+			ruinedPortalEndMaxChunkDistance = 107
 			#
 			# Add End themed ruined portals to modded End category biomes.
 			addRuinedPortalEndToModdedBiomes = true
@@ -118,7 +118,7 @@
 			#
 			# How rare are Nether Ruins. 1 for spawning in most chunks and 1001 for none.
 			#Range: 1 ~ 1001
-			ruinsNetherMaxChunkDistance = 35
+			ruinsNetherMaxChunkDistance = 75
 			#
 			# Add Nether Ruins to modded Nether category biomes.
 			addRuinsNetherToModdedBiomes = true
